[package]
name = "yggify"
version = "0.1.0"
edition = "2018"
authors = ["Salem Yaslem <s@sy.sa>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "0.13.2"
glib = "0.10.3"
gdk-pixbuf = "0.9.0"
serde_json = "1.0.74"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.9.0"
features = ["v2_44"]
